[gd_scene load_steps=11 format=3 uid="uid://bn03xjt5282bj"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_axrvw"]
[ext_resource type="Texture2D" uid="uid://cgddjqrbqhki2" path="res://art/smallorange.png" id="1_t50b4"]
[ext_resource type="Texture2D" uid="uid://cb1tgnaoac8b" path="res://art/jet_blast.png" id="3_2o5hv"]
[ext_resource type="Texture2D" uid="uid://dcx7pdhb4x5ii" path="res://art/jet_blast2.png" id="4_t4cp5"]
[ext_resource type="Texture2D" uid="uid://b50uwug65df4s" path="res://art/jet_blast3.png" id="5_tv468"]
[ext_resource type="Texture2D" uid="uid://5143b0sxnyy5" path="res://art/jet_blast4.png" id="6_wxv5d"]
[ext_resource type="Texture2D" uid="uid://2tc8mho4xms5" path="res://art/jet_blast5.png" id="7_3apx1"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3b6kj"]
bounce = 0.2

[sub_resource type="SpriteFrames" id="SpriteFrames_y4ogb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2o5hv")
}, {
"duration": 1.0,
"texture": ExtResource("4_t4cp5")
}, {
"duration": 1.0,
"texture": ExtResource("5_tv468")
}, {
"duration": 1.0,
"texture": ExtResource("6_wxv5d")
}, {
"duration": 1.0,
"texture": ExtResource("7_3apx1")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_drd6y"]
radius = 14.0
height = 68.0

[node name="Player" type="RigidBody2D" groups=["Lasers", "Player"]]
collision_mask = 2
mass = 3.0
physics_material_override = SubResource("PhysicsMaterial_3b6kj")
gravity_scale = 0.0
max_contacts_reported = 3
contact_monitor = true
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("1_axrvw")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_t50b4")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ThrustJetLeft" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-34, -4)
rotation = 3.14159
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_y4ogb")
frame_progress = 0.78778

[node name="ThrustJetRight" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-34, 4)
rotation = 3.14159
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_y4ogb")
frame_progress = 0.911858

[node name="ReverseJetLeft" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(8, -12)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_y4ogb")
frame_progress = 0.560436

[node name="ReverseJetRight" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(8, 13)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_y4ogb")

[node name="RotateClockwiseRearJet" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-16, 24)
rotation = 1.5708
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_y4ogb")

[node name="RotateClockwiseFrontJet" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(7, -18)
rotation = -1.5708
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_y4ogb")

[node name="RotateCounterClockRearJet" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-15, -24)
rotation = -1.5708
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_y4ogb")

[node name="RotateCounterClockFrontJet" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(6, 18)
rotation = 1.5708
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_y4ogb")
frame_progress = 0.78778

[node name="CrashTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_drd6y")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="CrashTimer" to="." method="_on_crash_timer_timeout"]
